<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

  <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <TextView
        android:id="@+id/MainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/maintext" />
    
    <TextView
        android:id="@+id/MinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MainText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/min" />

    <SeekBar
        android:id="@+id/MinSenser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MinText"
        android:layout_centerHorizontal="true"
        android:max="2000"
        android:progress="1000"
        android:layout_marginTop="10dp" />
    
    <TextView
        android:id="@+id/DelayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MinSenser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/Delay" />

    <SeekBar
        android:id="@+id/Delay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DelayText"
        android:layout_centerHorizontal="true"
        android:max="10"
        android:progress="2"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Delay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/serviceBtn" />

    <Button
        android:id="@+id/Test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/service"
        android:layout_marginTop="21dp"
        android:layout_centerHorizontal="true"
        android:text="@string/testBtn" />

    <Button
        android:id="@+id/Plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Test"
        android:layout_marginTop="26dp"
        android:layout_toLeftOf="@+id/Test"
        android:background="#00ffffff"
        android:onClick="Plus"
        android:textSize="30dp"
        android:text="+" />

    <Button
        android:id="@+id/Minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Test"
        android:layout_toRightOf="@+id/Test"
        android:layout_marginTop="26dp"
        android:onClick="Minus"
        android:background="#00ffffff"
        android:textSize="30dp"
        android:text="-" />

    <TextView
        android:id="@+id/test_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Plus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        android:textSize="20dp" />

    <CheckBox
        android:id="@+id/bootable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/test_status"
        android:layout_centerHorizontal="true"
        android:text="@string/boot_able" />

    <CheckBox
        android:id="@+id/Vibrator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bootable"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/Vibrator" />
    
    <CheckBox
        android:id="@+id/password_enable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Vibrator"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/password" />

  </RelativeLayout>
</ScrollView>